deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  selector:
    matchLabels:
      run: web
  template:
    metadata:
      labels:
        run: web
    spec:
      containers:
        - image: gcr.io/xend-326306/comment-management:latest
          imagePullPolicy: IfNotPresent
          name: web
          ports:
            - name: liveness-port
              containerPort: 5010
              protocol: TCP
          # env
