deployment-web2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
  namespace: default
spec:
  selector:
    matchLabels:
      run: web2
  template:
    metadata:
      labels:
        run: web2
    spec:
      containers:
        - image: gcr.io/xend-326306/member-management:latest
          imagePullPolicy: IfNotPresent
          name: web2
          ports:
            - name: liveness-port
              containerPort: 5020
              protocol: TCP
          # env
