service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
spec:
  ports:
    - port: 5010
      protocol: TCP
      targetPort: 5010
  selector:
    run: web
  type: NodePort
