service-web2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2
  namespace: default
spec:
  ports:
    - port: 5020
      protocol: TCP
      targetPort: 5020
  selector:
    run: web2
  type: NodePort
